key logger and random word selector added to JS. placeholder image in css. html skeleton layed out.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
         </div>
         <div class="row">
             <div class="col-md-6 text-center">
-                <div class="row"><div class="col-md-12"><p id="remaining-guesses">
-                     </p></div></div>
-                <div class=row"><div class="col-md-12" id="guessed-letters">a b c d e f g h i j k l m n <br> o p q r s t u v w x y z</div></div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <p id="unsolved-puzzle"></p>
+                    <p id="user-input"></p>
+                  </div>
+                </div>
+                <div class=row">
+                  <div class="col-md-12" >
+                    <p id="guessed-letters"></p>
+                  </div>
+                </div>
             </div>
             <div class="col-md-6"><img src="http://www.ilearngreek.com/images/p.png"></div>
         </div>
@@ -34,7 +42,6 @@
 </div>
 </div>
     <div class="footer"></div>
-
     <script src="assets/javascript/game.js" type="text/javascript"></script>
   </body>
 </html>
