changed javascript completely. Game functions.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
             <div class="col-md-6 text-center">
                 <div class="row">
                   <div class="col-md-12">
+                    <p>Guess the letters to spell the word!</p>
                     <p id="unsolved-puzzle"></p>
+                    <p id="blanks"></p>
                     <p id="user-input"></p>
                   </div>
                 </div>
                 <div class=row">
                   <div class="col-md-12" >
+                    <p>Lives</p>
+                    <p id="lives"></p>
+                    <p>Wrong Guesses</p>
                     <p id="guessed-letters"></p>
                   </div>
                 </div>
