fixed javascript to include win talley and reset words. Changed win/lose conditions to onkeyup for better functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                   <div class="col-md-12" >
                     <p>Lives</p>
                     <p id="lives"></p>
+                    <p>Wins</p>
+                    <p id="wins"></p>
                     <p>Wrong Guesses</p>
                     <p id="guessed-letters"></p>
                   </div>
