--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <div class="row">
-                  <div class="col-md-12">
+                  <div class="col-md-6">
                     <p class="h1">Hint: All words are fruits!</p>
                     <p class="display-1" id="unsolved-puzzle"></p>
                     <p id="blanks"></p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12">
                     <p class="text-center display-4">Wrong Guesses</p>
                     <p class="h1" id="guessed-letters"></p>
+                    
                   </div>
+                  <div class="col-md-6">
+                    <!-- <canvas id="hangman"></canvas> -->
+                    <img src="http://www.place-hold.it/300x400">
+                </div>
                 </div>
                 <div class="row my-4">
                   <div class="col-md-6 mx-auto bg-light" >
