--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="col-md-12">
         <div class="container jumbotron mb-0">
           <div class="container">
-            <h1 class="display-4">Word Guess Game</h1>
+            <h1 class="display-4">Hangman</h1>
             <hr>
             <p class="lead">
               <ul>
@@ -50,7 +50,7 @@
                   </div>
                   <div class="col-md-6">
                     <!-- <canvas id="hangman"></canvas> -->
-                    <img src="http://www.place-hold.it/300x400">
+                    <img src="assets/images/hangman/hangman6.JPG" id="hangman-image">
                 </div>
                 </div>
                 <div class="row my-4">
@@ -75,6 +75,9 @@
     
         </div>
         <div class="container footer-bar my-0">  </div>
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- custom js -->
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
